Adds active for parent menu items on 'Active' pages

--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -249,7 +249,8 @@
   background-color: rgba(0, 0, 0, .09);
 }
 
-.ucb-page-content .ucb-menu li.menu-item a.nav-link.is-active {
+.ucb-page-content .ucb-menu li.menu-item a.nav-link.is-active,
+.ucb-page-content .ucb-menu .menu-item.active:last-child > a{
   color: #000;
   background-color: var(--ucb-gold);
 }
