edge-to-edge and breadcrumb fix
Added padding to breadcrumb that was needed
Removed margin from blocks in edge-to-edge zones (this includes Post Title Wide and Post Wide).

--- a/css/layout-builder-styles.css
+++ b/css/layout-builder-styles.css
@@ -237,6 +237,11 @@
   margin-bottom: calc(var(--bs-gutter-y)* .5);
 }
 
+.ucb-bootstrap-layout-section .ucb-edge-to-edge .column {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .content-frame-styled .column {
   padding-top: calc(var(--bs-gutter-y)* .25);
   padding-bottom: calc(var(--bs-gutter-y)* .25);
