--- a/css/menu-styles/modern-styles.css
+++ b/css/menu-styles/modern-styles.css
@@ -2,7 +2,11 @@
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
     gap: 0rem;
   }
-
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
+    height: 100%;
+    display: flex;
+    align-items: end;
+  }
   .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
     background-color: #424242;
   }
@@ -58,8 +62,8 @@
     display: inline-block;
   }
 
-  .ucb-secondary-menu-region-container .menu.social-media .icon-bg:hover,
-  .ucb-secondary-menu-region-container .menu.social-media .icon-bg:focus,
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region-container .menu.social-media .icon-bg:hover,
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region-container .menu.social-media .icon-bg:focus,
   .ucb-secondary-menu-region-container li.menu-item a.nav-link:hover,
   .ucb-secondary-menu-region-container li.menu-item a.nav-link:focus {
     color: #fff;
@@ -80,6 +84,9 @@
     padding: 0 5px;
     display: inline-block;
     font-weight: 400;
+  }
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg {
+    color: #fff;
   }
 
   .ucb-main-nav-container.ucb-secondary-menu-position-above .menu.social-media .icon-bg a,
