fix for rise inline coloring

--- a/css/menu-styles/rise-styles.css
+++ b/css/menu-styles/rise-styles.css
@@ -288,6 +288,7 @@
     padding-right: .5rem;
     font-weight: 400;
     margin-right: 2px;
+    color: #aaa
   }
   .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg:hover,
   .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media .icon-bg:focus,
