--- a/css/menu-styles/rise-styles.css
+++ b/css/menu-styles/rise-styles.css
@@ -2,15 +2,23 @@
   .express-messages .express-message:first-of-type {
     margin-top: 40px;
   }
-
-  .ucb-main-nav-section {
+  .ucb-main-nav-container {
+    display: flex;
+    align-items: start;
+  }
+  .ucb-main-nav-container.ucb-secondary-menu-position-above {
     margin-bottom: 20px;
   }
 
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-main-menu{
+    margin-bottom: -20px;
+  }
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
     gap: 0rem;
   }
-
+  .ucb-secondary-menu-region-container .menu.social-media {
+    flex-wrap: wrap;
+  }
   .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-secondary-menu-region-container,
   .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-secondary-menu-region-container{
     background-color: #f7f7f7;
@@ -22,7 +30,6 @@
   .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-inline,
   .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-main-menu,
   .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-main-menu {
-    margin-bottom: -20px;
     background-color: #f7f7f7;
   }
 
@@ -37,7 +44,6 @@
   .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-inline,
   .ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-main-menu,
   .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-main-menu {
-    margin-bottom: -20px;
     background-color: #333;
   }
 
@@ -89,7 +95,6 @@
 
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-primary-menu-region {
     z-index: 5;
-    margin-top: -20px;
     width: 100%;
   }
 
@@ -99,18 +104,14 @@
 
   .ucb-header-white .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu,
   .ucb-header-light .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu {
-    flex-wrap: nowrap;
     z-index: 5;
-    background-color: #424242;
   }
 
   .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region,
   .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region,
   .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu,
   .ucb-header-black .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu {
-    flex-wrap: nowrap;
     z-index: 5;
-    background-color: #f7f7f7;
   }
 
   .ucb-header-dark .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region,
@@ -339,8 +340,11 @@
     background-color: #333;
   }
 
-  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu {
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu.social-media,
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu,
+  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .ucb-menu {
     gap: 0;
+    justify-content: left;
   }
 
 
@@ -351,7 +355,6 @@
     -webkit-box-shadow: 0 3px 1px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: 0 3px 1px rgba(0, 0, 0, 0.08);
     box-shadow: 0 3px 1px rgba(0, 0, 0, 0.08);
-    margin-bottom: -20px;
   }
 
   section.ucb-main-nav-section:has(.ucb-secondary-menu-position-inline) {
