--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -312,6 +312,7 @@
   display: flex;
   flex-direction: row;
   justify-content: end;
+  flex-wrap: wrap;
   gap: 0.5rem;
   font-size: 1.25rem;
   line-height: 1.25;
