--- a/templates/block/block--events-calendar.html.twig
+++ b/templates/block/block--events-calendar.html.twig
@@ -39,12 +39,12 @@
 	<div{{attributes.addClass(classes,blockStyles)}}>
 		{{ title_prefix }}
 		{% if label %}
-			<div class="block-title {{ headingStyle }}">
-				<{{ headingTag }}{{title_attributes}}>
+			<div class="block-title-outer">
+				<{{ headingTag }}{{title_attributes}} class="block-title">
 					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
 						{{ content.field_bs_icon }}
 					</span>
-					<span class="block-title-text">
+					<span class="block-title-text {{ headingStyle }}">
 						{{ label }}
 					</span>
 				</{{ headingTag }}>
