--- a/templates/block/block--hero-unit.html.twig
+++ b/templates/block/block--hero-unit.html.twig
@@ -80,15 +80,15 @@
 	<div class="{{ classes|join(' ') }} {{ blockStyles|join(' ') }}">
 		{{ title_prefix }}
 		{% if label %}
-			<div class="block-title {{ headingStyle }}">
-				<{{headingTag}}{{title_attributes}}>
+			<div class="block-title-outer">
+				<{{ headingTag }}{{title_attributes}} class="block-title">
 					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
 						{{ content.field_bs_icon }}
 					</span>
-					<span class="block-title-text">
+					<span class="block-title-text {{ headingStyle }}">
 						{{ label }}
 					</span>
-				</{{headingTag}}>
+				</{{ headingTag }}>
 			</div>
 		{% endif %}
 		{{ title_suffix }}
