--- a/templates/block/block--ucb-slate-form.html.twig
+++ b/templates/block/block--ucb-slate-form.html.twig
@@ -29,16 +29,16 @@
 <div{{attributes.addClass(classes,blockStyles)}}>
 	{{ title_prefix }}
 	{% if label %}
-		<div class="block-title {{ headingStyle }}">
-			<{{headingTag}}{{title_attributes}}>
-				<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-					{{ content.field_bs_icon }}
-				</span>
-				<span class="block-title-text">
-					{{ label }}
-				</span>
-			</{{headingTag}}>
-		</div>
+		<div class="block-title-outer">
+				<{{ headingTag }}{{title_attributes}} class="block-title">
+					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+						{{ content.field_bs_icon }}
+					</span>
+					<span class="block-title-text {{ headingStyle }}">
+						{{ label }}
+					</span>
+				</{{ headingTag }}>
+			</div>
 	{% endif %}
 	{{ title_suffix }}
 	<slate-form slateid="{{content.field_ucb_slate_form_id|render|striptags|trim|lower}}" slatedomain="{{content.field_ucb_slate_form_domain.0['#url']}}"></slate-form>
