--- a/templates/block/block--video-hero-unit.html.twig
+++ b/templates/block/block--video-hero-unit.html.twig
@@ -94,16 +94,16 @@
   <div class="{{ classes|join(' ') }} {{ blockStyles|join(' ') }}">
     {{ title_prefix }}
     {% if label %}
-      <div class="block-title {{ headingStyle }}">
-        <{{headingTag}}{{title_attributes}}>
-          <span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
-            {{ content.field_bs_icon }}
-          </span>
-          <span class="block-title-text">
-            {{ label }}
-          </span>
-        </{{headingTag}}>
-      </div>
+      <div class="block-title-outer">
+				<{{ headingTag }}{{title_attributes}} class="block-title">
+					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
+						{{ content.field_bs_icon }}
+					</span>
+					<span class="block-title-text {{ headingStyle }}">
+						{{ label }}
+					</span>
+				</{{ headingTag }}>
+			</div>
     {% endif %}
     {{ title_suffix }}
 			<div class="{{ classes|join(' ') }} {{size}} {{overlayClass}} {{videoClass}} {{containerSize}}" style="{{ bgValue }}">
