--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,8 @@ ul.ucb-main-menu.nav {
   font-size: 0.9rem;
 }
 
-.ucb-footer-menu-region .block-menu-blocksocial-media-menu {
+.ucb-footer-menu-region .block-menu-blocksocial-media-menu,
+.ucb-footer-menu-region .block-system-menu-blocksocial-media-menu {
   padding: 10px;
   display: flex;
   align-items: center;
