Newsletter: Fixes special characters in section titles

--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -14,7 +14,7 @@
 	<tbody>
   		<tr>
 			<td align="center" style="font-size:20px;text-align: left; padding-right:10px; padding-left:10px;padding-top:20px; padding-bottom:20px;">
-      			<h2>{{ content.field_newsletter_section_title|render|striptags|trim }}</h2>
+      			<h2>{{ content.field_newsletter_section_title|render }}</h2>
 	  		</td>
  		</tr>
 	</tbody>
