Taxonomy clouds: adds missing body field to templates

--- a/templates/block/block--ucb-category-cloud.html.twig
+++ b/templates/block/block--ucb-category-cloud.html.twig
@@ -44,5 +44,6 @@
 			</div>
 	{% endif %}
 	{{ title_suffix }}
+  {{ content.body }}
 	<category-cloud-block base-uri="{{baseurlJSON}}"></category-cloud-block>
 </div>
