--- a/templates/block/block--ucb-tag-cloud.html.twig
+++ b/templates/block/block--ucb-tag-cloud.html.twig
@@ -44,5 +44,6 @@
 			</div>
 	{% endif %}
 	{{ title_suffix }}
+  {{ content.body }}
 	<tag-cloud-block base-uri="{{baseurlJSON}}"></tag-cloud-block>
 </div>
